--- a/style.css
+++ b/style.css
@@ -169,3 +169,191 @@ button{
   .rosco>*:nth-of-type(25) {
     transform: rotate(615.6deg) translate(13rem) rotate(-615.6deg);
   }
+js/
+const palabras = [
+    {
+        letra: "A",
+        descr: "La necesitamos cuando tenemos que esperar un determinado suceso que demora en ejecutarse, y se necesita para acceder a una api.",
+        palabra: "Asincronía",
+        contiene: false,
+        empieza: true
+    },
+    {
+        letra: "B",
+        descr: "Se encarga de que toda la lógica de una página web funcione, es el desarrollo del elemento web que no vemos.",
+        palabra: "Backend",
+        contiene: false,
+        empieza: true
+
+    },
+    {
+        letra: "C",
+        descr: "Indica elementos de una entidad, pueden asociarse a elementos de la otra entidad relacionada.",
+        palabra: "Cardinalidad",
+        contiene: false,
+        empieza: true
+
+    },
+    {
+        letra: "D",
+        descr: "Contiene todas o una parte de las tablas presentes en la base de datos.",
+        palabra: "Diagrama",
+        contiene: false,
+        empieza: true
+
+    },
+    {
+        letra: "E",
+        descr: "Tiene atributos y relaciones, corresponde a una o varias tablas relacionadas en la base de datos.",
+        palabra: "Entidad",
+        contiene: false,
+        empieza: true
+    },
+    {
+        letra: "F",
+        descr: "Identifica una columna o un grupo de columnas en una tabla que se refiere a las columnas en otra tabla.",
+        palabra: "Foreign Key",
+        contiene: false,
+        empieza: true
+    },
+    {
+        letra: "G",
+        descr: "Página para alojar proyectos, se utiliza principalmente para la creación de código fuente de programas de ordenador.",
+        palabra: "Github",
+        contiene: false,
+        empieza: true
+    },
+    {
+        letra: "H",
+        descr: "Cuando las entidades hijos, se les transmite los atributos de la entidad padre.",
+        palabra: "Herencia",
+        contiene: false,
+        empieza: true
+    },
+    {
+        letra: "I",
+        descr: "Es  generalmente un directorio en un orden específico que se utiliza con fines de orientación. Es el listado de páginas web que es emitido por el motor de búsqueda en respuesta a una solicitud de búsqueda del usuario.",
+        palabra: "Index",
+        contiene: false,
+        comienza: true
+    },
+    {
+        letra: "J",
+        descr: "Lenguaje de programación interpretado, dialecto del estándar ECMAScript. Se define como orientado a objetos, ​ basado en prototipos, imperativo, débilmente tipado y dinámico.",
+        palabra: "JavaScript",
+        contiene: false,
+        comienza: true
+    },
+    {
+        letra: "L",
+        descr: "Pensamiento que va hacer el programa (falta completar)",
+        palabra: "Logica",
+        contiene: false,
+        comienza: true
+    },
+    {
+        letra: "M",
+        descr: "Se encarga de arreglar el tipo de datos de columna y arreglar  restricciones de columna",
+        palabra: "Modify",
+        contiene: false,
+        comienza: true
+    },
+    {
+        letra: "N",
+        descr: "Es el proceso de elaborar, aplicar y mejorar las normas que se emplean en distintas actividades, con el fin de ordenarlas y mejorarlas.",
+        palabra: "Normalizacion",
+        contiene: false,
+        comienza: true
+    },
+    {
+        letra: "Ñ",
+        descr:"Área enfocada en el desarrollo de interfaces digitales, como el boceto  de sitios y aplicaciones para web",
+        palabra:"Diseño Web",
+        contiene: true,
+        comienza: false
+    },
+    {
+        letra: "O",
+        descr:"Es un número en base 8 que especifique el permiso. Los números en este modo se especifican empezando el número por un 0.",
+        palabra:"Octal",
+        contiene:false,
+        comienza:true
+    },
+    {
+        letra: "P",
+        descr:"Es el proceso utilizado para idear y ordenar las acciones necesarias para realizar un proyecto, en la actualidad, la noción de esta se encuentra muy asociada a la creación de aplicaciones de informática y videojuegos.",
+        palabra:"Programación",
+        contiene:false,
+        comienza:true
+    },
+    {
+        letra: "Q",
+        descr:"Término que el usuario escribe en un buscador, como por ejemplo Google, cuando desea realizar una búsqueda utilizando Keywords o palabras clave.",
+        palabra:"Query",
+        contiene:false,
+        comienza:true
+    },
+    {
+        letra: "R",
+        descr:"Biblioteca Javascript de código abierto diseñada para crear interfaces de usuario con el objetivo de facilitar el desarrollo de aplicaciones en una sola página.",
+        palabra:"React",
+        contiene:false,
+        comienza:true
+    },
+    {
+        letra: "O",
+        descr:"Es un número en base 8 que especifique el permiso. Los números en este modo se especifican empezando el número por un 0.",
+        palabra:"Octal",
+        contiene:false,
+        comienza:true
+    },
+    {
+        letra: "O",
+        descr:"Es un número en base 8 que especifique el permiso. Los números en este modo se especifican empezando el número por un 0.",
+        palabra:"Octal",
+        contiene:false,
+        comienza:true
+    },
+    {
+        letra: "O",
+        descr:"Es un número en base 8 que especifique el permiso. Los números en este modo se especifican empezando el número por un 0.",
+        palabra:"Octal",
+        contiene:false,
+        comienza:true
+    },
+    {
+        letra: "O",
+        descr:"Es un número en base 8 que especifique el permiso. Los números en este modo se especifican empezando el número por un 0.",
+        palabra:"Octal",
+        contiene:false,
+        comienza:true
+    },
+    {
+        letra: "O",
+        descr:"Es un número en base 8 que especifique el permiso. Los números en este modo se especifican empezando el número por un 0.",
+        palabra:"Octal",
+        contiene:false,
+        comienza:true
+    },
+    {
+        letra: "O",
+        descr:"Es un número en base 8 que especifique el permiso. Los números en este modo se especifican empezando el número por un 0.",
+        palabra:"Octal",
+        contiene:false,
+        comienza:true
+    },
+    {
+        letra: "O",
+        descr:"Es un número en base 8 que especifique el permiso. Los números en este modo se especifican empezando el número por un 0.",
+        palabra:"Octal",
+        contiene:false,
+        comienza:true
+    },
+    {
+        letra: "O",
+        descr:"Es un número en base 8 que especifique el permiso. Los números en este modo se especifican empezando el número por un 0.",
+        palabra:"Octal",
+        contiene:false,
+        comienza:true
+    }
+];
